# audio-metadata-manager

./: .gitignore  AGENTS.md  CODEX.md  CURRENT_GOAL.md  Makefile  README.md  app.py  auto_tag_cli.py  export_training_cli.py  main.py  nl_query.py  pyproject.toml  requirements.txt  review_metadata.py  search_metadata.py  search_similar.py
audio_metadata/: __init__.py  auto_tag.py  extractor.py  indexer.py  models.py  nl_query.py  scanner.py  schema.py  training_data.py
examples/: example-output.json  search-demo.json
tests/: test_auto_tag.py  test_auto_tag_cli.py  test_nl_query.py  test_review_batch_tools.py  test_review_overrides.py  test_schema_model_outputs.py  test_training_data.py
